# cmake-vcpkg-project-template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: main.yml
SchemaScanConsole/: CMakeLists.txt  SchemaScanConsole.cpp
SchemaScanLib/: CMakeLists.txt  SchemaScanLib.h  Schematic.cpp  Schematic.h
cmake/: ccache.cmake  clang-format.cmake  cmake-utils.cmake  compiler-warnings.cmake  submodule-init.cmake  vcpkg-init.cmake
include/headers/: game.h  object.h  player.h  timer.h  vector2.h
src/: city.cpp  city.h  game.cpp  gui.cpp  gui.h  jewel.cpp  jewel.h  main.cpp  object.cpp  physics.cpp  physics.h  player.cpp  police.cpp  police.h  robber.h
src/Backends/: RmlUi_Backend.h  RmlUi_Backend_SDL_GL3.cpp  RmlUi_Include_GL3.h  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
